--- a/TP-QRCL/Info.plist
+++ b/TP-QRCL/Info.plist
@@ -7,6 +7,6 @@
 	<key>SUPublicEDKey</key>
 	<string>ip4tiz8oCFabqDgm3SVX+fYqk6peXmBMtWVpIcfI3r8=</string>
 	<key>SUFeedURL</key>
-	<string>https://github.com/ken041492/TP-QRCL/blob/main/TP-QRCL-1.4.zip</string>
+	<string>https://github.com/ken041492/TP-QRCL/blob/main/appcast.xml</string>
 </dict>
 </plist>
